[package]
name = "wallet-wasm"
version = "0.1.0"
authors = ["vincent.hanquez@iohk.io"]
license = "MIT"
description = "Exporting to wasm the cardano wallet"
keywords = [ "Cardano", "Wallet", "Wasm" ]

[build-dependencies]

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
rcw = { path = "../rust/rcw" }
raw_cbor = { path = "../rust/cbor" }
wallet-crypto = { path = "../rust/wallet-crypto" }

[lib]
crate-type = ["cdylib"]
