[package]
name = "wallet-wasm"
version = "0.1.0"
authors = ["vincent.hanquez@iohk.io"]
license = "MIT"
description = "Exporting to wasm the cardano wallet"
keywords = [ "Cardano", "Wallet", "Wasm" ]

[build-dependencies]

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
cryptoxide = "0.1"
cbor_event = "2.1.2"

[dependencies.cardano]
path = "../rust/cardano"
features = [ "generic-serialization" ]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
debug = false
lto = true
opt-level = 's'
